--- a/ansible/provision_ad.yml
+++ b/ansible/provision_ad.yml
@@ -1,6 +1,6 @@
 ---
 # # Update Administrator's password
-- hosts: ad-root
+- hosts: ad-root | ad-child | ad-tree
   gather_facts: no
   tasks:
     - name: set administrator password
@@ -10,14 +10,18 @@
         name: Administrator
         password: Secret123
 
-- hosts: ad-root
+- hosts: ad-root | ad-child | ad-tree
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
-  roles:
-    - windows/common
-    - windows/ad-root
-    - windows/ipa-ad-data
+    role: "{{ inventory_hostname }}"
+  tasks:
+    - include_role: name=windows/common
+    - include_role:
+        name: "windows/{{ role }}"
+    - include_role:
+        name: windows/ipa-ad-data
+        tasks_from: "{{ role }}"
 
 # Provision linux hosts but include ad and ad-child in the list so we can access
 # their data to generate ipa test config file
