setup hostname on Windows machine during ansible provisioning
Vagrant provisioning often fails due to WinRM issues.
In 380c8b8c a workaround was added: if "vagrant up" fails, we run it
one more time. Unfortunately when re-running "vagrant up" for already
running VM, vagrant does not finalize provisioning including setting up
the hostname.
The wrong hostname affects tests which need to retrieve certificate from
AD Certificate authority, because filename of the certificate includes
the hostname, thus the filename becomes unpredictable.

--- a/ansible/roles/windows/common/tasks/main.yml
+++ b/ansible/roles/windows/common/tasks/main.yml
@@ -3,6 +3,18 @@
 
 - wait_for_connection:
 
+- name: set host name from ansible inventory name
+  win_hostname:
+    name: "{{ inventory_hostname }}"
+  register: hostname
+
+- name: Reboot
+  win_reboot:
+  when: hostname.reboot_required
+
+- setup:
+  when: hostname is changed
+
 - name: Install AD Domain Services feature
   win_feature:
     name: AD-Domain-Services
