Reboot Windows after setting up certificate authority.
ipa-replica-manage fails to establish secure ldap connection to Windows
using root certificate provided by newly setup AD CA.
Restarting Windows fixes the issue.

--- a/ansible/roles/windows/ad-root/tasks/certificate-authority.yaml
+++ b/ansible/roles/windows/ad-root/tasks/certificate-authority.yaml
@@ -7,3 +7,9 @@
   win_shell: Install-AdcsCertificationAuthority -CAType EnterpriseRootCA -Force
   args:
     creates: C:\Windows\System32\CertSrv\CertEnroll
+  register: cert_authority
+
+- name: Reboot to finish configuring Certification Authority
+  win_reboot:
+    test_command: 'dsquery user -name Administrator'
+  when: cert_authority is changed
