--- a/ansible/provision_ad.yml
+++ b/ansible/provision_ad.yml
@@ -14,14 +14,34 @@
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
+  roles:
+    - windows/common
+
+- hosts: ad-root
+  vars:
+    ansible_user: Administrator
+    ansible_password: Secret123
+  roles:
+    - windows/ad-root
+
+- hosts: ad-child,ad-tree
+  vars:
+    ansible_user: Administrator
+    ansible_password: Secret123
     role: "{{ inventory_hostname }}"
   tasks:
-    - include_role: name=windows/common
     - include_role:
         name: "windows/{{ role }}"
-    - include_role:
-        name: windows/ipa-ad-data
-        tasks_from: "{{ role }}"
+
+- hosts: ad-root,ad-child,ad-tree
+  vars:
+    ansible_user: Administrator
+    ansible_password: Secret123
+    role: "{{ inventory_hostname }}"
+  tasks:
+  - include_role:
+      name: windows/ipa-ad-data
+      tasks_from: "{{ role }}"
 
 # Provision linux hosts but include ad and ad-child in the list so we can access
 # their data to generate ipa test config file
