--- a/ansible/provision_ad.yml
+++ b/ansible/provision_ad.yml
@@ -2,6 +2,7 @@
 # # Update Administrator's password
 - hosts: ad-root,ad-child,ad-tree
   gather_facts: no
+  any_errors_fatal: true
   tasks:
     - name: set administrator password
       changed_when: yes
@@ -11,6 +12,7 @@
         password: Secret123
 
 - hosts: ad-root,ad-child,ad-tree
+  any_errors_fatal: true
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
@@ -18,6 +20,7 @@
     - windows/common
 
 - hosts: ad-root
+  any_errors_fatal: true
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
@@ -25,6 +28,7 @@
     - windows/ad-root
 
 - hosts: ad-child,ad-tree
+  any_errors_fatal: true
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
@@ -34,6 +38,7 @@
         name: "windows/{{ role }}"
 
 - hosts: ad-root,ad-child,ad-tree
+  any_errors_fatal: true
   vars:
     ansible_user: Administrator
     ansible_password: Secret123
