--- a/ansible/provision_ad.yml
+++ b/ansible/provision_ad.yml
@@ -64,6 +64,10 @@
       include_role:
         name: windows/ipa-ad-data
 
+- hosts: controller
+  roles:
+    - windows/ad-tests
+
 # Provision linux hosts but include ad and ad-child in the list so we can access
 # their data to generate ipa test config file
 - hosts: all
